<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/difficulty"
        android:title="@string/difficulty">
        <menu
            android:id="@+id/difficulty_group">
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/easy_option"
                    android:title="@string/easy"/>
                <item
                    android:id="@+id/medium_option"
                    android:title="@string/medium"/>
                <item
                    android:id="@+id/hard_option"
                    android:title="@string/hard"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/help"
        android:title="@string/about" />
</menu>